@@ -1,0 +1,55 @@
+.od-lightbox-overlay {
+	position:fixed;
+	display:none;
+	opacity:0.3;
+	filter:alpha(opacity=30);
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:#0B0B0B;
+	z-index:99990;
+}
+.od-lightbox-box {
+
+	position:fixed;
+	display:none;
+	width:400px;
+	height:400px;
+	top:50%;
+	left:50%;
+	margin-top:-200px;
+	margin-left:-200px;
+	z-index:99991;
+}
+.od-lightbox-shadow {
+	position:absolute;
+	background:#FFF;
+	width:100%;
+	height:100%;
+	opacity:0.3;
+	filter:alpha(opacity=30);
+}
+.od-lightbox-content {
+	position:absolute;
+	background-color:#fff;
+	top:10px;
+	left:10px;
+	right:10px;
+	bottom:10px;
+	overflow:hidden;
+	padding: 30px;
+}
+.od-lightbox-close {
+	position:absolute;
+	top:10px;
+	right:10px;
+	height:20px;
+	width:20px;
+	background:#fff;
+	text-align:center;
+	cursor:pointer;
+	color:#444;
+	font:16px/22px arial,sans-serif;
+	z-index:99999;
+}
