@@ -177,12 +177,13 @@
 							<!-- ###CGU_FIELD### begin -->
 								<!-- ###SECTION_FILE_NOTLINKED### start -->
 									<!-- ###PICTO_ITEM### start -->
-									<div class="download-link">
-										<div class="file"><a href="#">###PICTO###</a></div>
+									<div class="###PREFIXID###_pictoItem ###PREFIXID###_link_cgu">
+										<div class="###PREFIXID###_file"><a href="#">###PICTO###</a></div>
+										<div class="###PREFIXID###_fileSize">###FILESIZE###</div>
 									</div>
 									<!-- ###PICTO_ITEM### end -->
 								<!-- ###SECTION_FILE_NOTLINKED### end -->
-								<div class="cgu">
+								<div class="###PREFIXID###_cgu">
 									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
 										<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 										###CGU_LABEL###
@@ -219,12 +220,13 @@
 							<!-- ###CGU_FIELD### begin -->
 								<!-- ###SECTION_FILE_NOTLINKED### start -->
 									<!-- ###PICTO_ITEM### start -->
-									<div class="download-link">
-										<div class="file"><a href="#">###PICTO###</a></div>
+									<div class="###PREFIXID###_pictoItem ###PREFIXID###_link_cgu">
+										<div class="###PREFIXID###_file"><a href="#">###PICTO###</a></div>
+										<div class="###PREFIXID###_fileSize">###FILESIZE###</div>
 									</div>
 									<!-- ###PICTO_ITEM### end -->
 								<!-- ###SECTION_FILE_NOTLINKED### end -->
-								<div class="cgu">
+								<div class="###PREFIXID###_cgu">
 									<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
 										<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 										###CGU_LABEL###
@@ -345,12 +347,14 @@
 		<!-- ###CGU_FIELD### begin -->
 			<!-- ###SECTION_FILE_NOTLINKED### start -->
 				<!-- ###PICTO_ITEM### start -->
-				<div class="download-link">
-					<div class="file"><a href="#">###PICTO###</a></div>
+				<div class="###PREFIXID###_pictoItem ###PREFIXID###_link_cgu">
+					<div class="###PREFIXID###_file"><a href="#">###PICTO###</a></div>
+					<div class="###PREFIXID###_md5">###FILEMD5###</div>
+					<div class="###PREFIXID###_fileSize">###FILESIZE###</div>
 				</div>
 				<!-- ###PICTO_ITEM### end -->
 			<!-- ###SECTION_FILE_NOTLINKED### end -->
-		<div class="cgu">
+		<div class="###PREFIXID###_cgu">
 			<form action="###URL_LICENSE###" method="post" onsubmit="return valid_data_form('cgu###UID_VALUE###');">
 				<input type="checkbox" name="###CGU###" id="cgu###UID_VALUE###"/>
 				###CGU_LABEL###
