@@ -1,3 +1,6 @@
+2012-09-17 Emilie SAGNIEZ <emilie@in-cite.net>
+	* Open CGU form to lightbox (only datastore)
+
 2012-09-14 Emilie SAGNIEZ <emilie@in-cite.net>
 	* Add possibility to enable/disable CGU to appstore/datastore
 	* Add datastore template exemple
